--- a/equipment/index.html
+++ b/equipment/index.html
@@ -332,36 +332,42 @@
 <div class="Move"><p class="MagicItem">燃燒車輪 (The Burning Wheel)	<span class="Tags">2 重量</span></p>
 <p class="NoIndent">
 	一個古老的木質車輪，輪箍外圈鑲嵌著鋼鐵，看起來彷彿曾用於戰車上。乍看之下它並沒有什麼特別的──輪內的許多幅條已經破碎，整體看起來平凡無奇。但在魔法的審查或專家的檢視之下，它的本質將被揭露：燃燒車輪是來自火焰之神的贈禮，並能憑著祂的神威而熊熊燃燒。</p>
-<p>當你持握燃燒車輪，並說出火焰之神的名諱時，擲+體質：<br/>
+<p class="NoIndent">當你持握燃燒車輪，並說出火焰之神的名諱時，擲+體質：<br/>
 	✴擲出7+時，你呼喚的神祇將注意到你，並允許你謁見。然而，謁見神祇並不是沒有代價的：<br/>
-	✴擲出10+時，你選擇你的其中一個屬性，並將它減少至會使調整值降低一級的數值（舉例來說，屬性值 14的相應調整值為 +1，因此它將被降低至 12，使調整值變為 +0）。<br/>
+	✴擲出10+時，你選擇你的其中一個屬性，並將它減少到至少會使調整值降低一級的數值（舉例來說，屬性值 14的相應調整值為 +1，因此它將被降低至 12，使調整值變為 +0）。<br/>
 	✴擲出7-9時，由GM選擇你要減少的屬性。</p>
 <p>
-	一旦被使用，燃燒車輪將被點燃並燃燒綻放出燦爛火光。它並不能保護你不受到這些火焰的傷害，也不會提供任何游泳的加值。</p></div>
+	一旦被使用，燃燒車輪將被點燃並綻放出燦爛火光。它無法保護你不受到這些火焰的傷害，也不會提供任何游泳的加值。</p></div>
 
 <div class="Move"><p class="MagicItem">布雷赫船長的豐穰之角 (Captain Bligh’s Cornucopia)	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">
 	一個黃銅打造的船號角，蜷曲而華麗，刻有豐饒諸神的符號。當被吹響時，除了聲音之外，這個號角還會灑落出各種各樣的食物，其分量足以餵飽每個聽到號角聲音的人。</p></div>
 
-<div class="Move"><p class="MagicItem">卡科薩尖塔 (The Carcosan Spire)	<span class="Tags">及遠, 投擲, 3 重量</span></p>
+<div class="Move"><p class="MagicItem">卡科薩尖槍 (The Carcosan Spire)	<span class="Tags">及遠, 投擲, 3 重量</span></p>
 <p class="NoIndent">
-	沒有人知道這把由扭曲變形的純白珊瑚製成的長矛是從何而來。那些長時間攜帶這把長矛的人們將發現自己心靈被異星之夢佔據，並會開始聽到來自他處的詭譎思想。沒有人能夠倖免於此。當被用來對付那些「自然」的目標時（像是人類、哥布林、梟熊等等），這把長矛的效果就與普通長矛一模一樣。它真正的目的是用來傷害那些憑藉怪異本質保護自己不受尋常武器傷害的事物。一旦被這樣使用，卡科薩尖塔將能傷害那些原本不會受到任何傷害的敵人。卡科薩尖塔的持用者能夠一眼就認出視線範圍內的這類敵人──尖塔認得它自己的死敵。</p></div>
+	沒有人知道這把由扭曲變形的純白珊瑚製成的長矛是從何而來。那些長時間攜帶這把長矛的人們將發現自己心靈被異星之夢佔據，並會開始聽到來自他處的詭譎思想。沒有人能夠倖免於此。當被用來對付那些「自然」的目標時（像是人類、哥布林、梟熊等等），這把長矛的效果就與普通長矛一模一樣。它真正的目的是用來傷害那些憑藉怪異本質保護自己不受尋常武器傷害的事物。一旦被這樣使用，卡科薩尖槍將能傷害那些原本不會受到任何傷害的敵人。卡科薩尖槍的持用者能夠一眼就認出視線範圍內的這類敵人──尖槍認得它自己的死敵。</p></div>
 
-<div class="Move"><p class="MagicItem">沉默群星斗篷 (Cloak of Silent Stars)	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">A cape of rich black velvet outside and sparkling with tiny points of light within, this cloak bends fate, time and reality around it to protect the wearer, who may defy danger with whatever stat they like. To do this, the wearer invokes the cloak’s magic and their player describes how the cloak helps “break the rules.” They can deflect a fireball with CHA by convincing it they deserve to live or elude a fall by applying the mighty logic of their INT to prove the fall won’t hurt. The cloak makes it so. It can be used once for each stat before losing its magic.</p></div>
+<div class="Move"><p class="MagicItem">寂靜群星斗篷 (Cloak of Silent Stars)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	一件外頭鋪著深黑色天鵝絨，內裏點綴著群星光點的斗篷。這件斗篷能夠扭曲周遭的命運、時間、和現實來保護它的穿戴者，使他能夠以任意屬性來進行<b>面對危險</b>動作。當要這麼做時，穿戴者將引發這件斗篷的魔法，且玩家將說明這件斗篷是如何幫助他們「破壞規則」。穿戴者將能使用 魅力屬性 來反彈火球，說服火球相信他值得繼續活下去、或者透過強大的邏輯證明墜落並不會造成傷害，從而使用 智力屬性 來規避掉墜落傷害。這件斗篷讓這一切得以成真。它可以被使用於每個屬性各一次，在這之後，它的魔法將會隨即消散。</p></div>
 
 <div class="Move"><p class="MagicItem">記憶硬幣 (Coin of Remembering)	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">What appears, at a glance, to be a simple copper coin is, in truth, an enchanted coin. Its bearer can, at any time, redeem it to know immediately one fact that has been forgotten. The coin vanishes thereafter. It does not have to be a thing forgotten by the bearer, but it cannot be “known.” Interpretation of this stipulation is left to the gods. If the coin is unsuccessful, it will still paint an image in the mind’s eye of someone or something that does remember what was sought.</p></div>
+<p class="NoIndent">
+	這個乍一看不過是一枚普通銅幣的，事實上，其實是一枚魔法硬幣。在任何時候，它的持有者都可以用它來贖回一個已經被遺忘的事實，並立即知曉該事實。這個硬幣將會隨即消失不見。這個事實並不一定要是某個被持有者遺忘的事情，但它不能是「已經被知道」的事實。這個條款的解讀將留給諸神決定。若這個硬幣沒能成功發揮效果，它仍會在持有者的腦海中描繪出某個人或某個事物的形象：他們確實記得你所找尋的這個事實。</p></div>
 
 <div class="Move"><p class="MagicItem">尋常卷軸 (Common Scroll)	<span class="Tags">1 使用次數, 0 重量</span></p>
-<p class="NoIndent">A common scroll has a spell inscribed on it. The spell must be castable by you or on your class’s spell list for you to be able to cast it. When you cast a spell from a scroll, the spell takes effect, simple as that.</p></div>
+<p class="NoIndent">
+	每卷尋常卷軸中都有一個法術被抄寫在上頭。你必須要能夠施放這個法術、或這個法術得在你職業的法術列表中，你才能夠使用卷軸來施放它。當你從卷軸施放法術，該法術就會發揮效果，就這麼簡單。</p></div>
 
 <div class="Move"><p class="MagicItem">剋魔膏油 (Devilsbane Oil)	<span class="Tags">1 使用次數, 0 重量</span></p>
-<p class="NoIndent">A holy oil, created in limited supply by a mute sect of mountain monks whose order protected humanity from the powers of the Demon Pits in ancient epochs. Only a few jars remain. When applied to any weapon and used to strike a denizen of any outer plane, the oil undoes the magic that binds that creature. In some cases, this will return it to its home. In others, it merely undoes any magic controlling it. The oil stays on the weapon for a few hours before it dries and flakes away.</p>
-<p>If applied to the edges of a doorway or drawn in a circle, the oil will repel creatures whose home is any of the outer planes. They cannot pass across it. The oil lasts for one full day before it soaks in or evaporates.</p></div>
+<p class="NoIndent">
+	由一群高山上的啞僧侶在有限供應下製造的聖潔膏油。在遙遠古老的年代，這個宗派守護著人類不受到來自深淵惡魔的危害。如今，這種膏油只剩下寥寥數罐。當被塗抹在任何武器，並用來攻擊那些來自異位面的住民時，剋魔膏油將會解除約束著該生物的魔法。在某些情況下，這將使該生物被遣返回牠的原生位面。至於其他情況，這些膏油僅僅能夠解除那用來操控該生物的魔法。塗抹於武器上的膏油將會持續數個小時，在這之後它便會乾燥脫落。</p>
+<p>
+	若塗抹於門口的邊緣、或被用來畫出一個圓形區域，則這個膏油將會驅散任何原生於異位面的生物。牠們無法穿過被這個膏油圈起的區域邊緣。這個膏油能夠持續一整天，在這之後它便會被吸收或蒸發消散。</p></div>
 
-<div class="Move"><p class="MagicItem">耳蟲蠟 (Earworm Wax)	<span class="Tags">1 use, 0 重量</span></p>
-<p class="NoIndent">A yellowish candle. Seems never to burn out and the light it casts is strange and weak. Its wax is always cool, too. Drip the wax into the ear of a target and gain 3 hold. Spend that hold and ask your target a question. They find themselves telling you the whole truth, despite themselves. The consequences, after the fact? Those are up to you to deal with.</p></div>
+<div class="Move"><p class="MagicItem">耳蟲蠟 (Earworm Wax)	<span class="Tags">1 使用次數, 0 重量</span></p>
+<p class="NoIndent">
+	一根淡黃色的蠟燭。它似乎永遠也不會燒盡，且散發出的光芒顯得既怪誕而微弱。它的蠟永遠都是冰涼的。當你把蠟油滴進目標的耳中，你獲得 3 掌握。你可以消耗掌握來對你的目標詢問一個問題。他們將發現自己只能對你如實全盤托出，儘管他們可能並無此意。至於這真相會帶來什麼樣的後果？就是你要去解決的事了。</p></div>
 
 <div class="Move"><p class="MagicItem">回聲之瓶 (The Echo)	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A seemingly empty bottle. Once unstoppered, the whispers of another plane resound once and fall silent. In the silence, the bearer learns in his soul the coming of one great danger and how he can avoid it. At any point after you use the Echo, you can ignore the results of any single die roll—yours or another player’s—and roll again. Once opened, the Echo is released and gone forever.</p></div>
@@ -418,20 +424,33 @@
 <p class="NoIndent">Cloudy red gemstones the size of a thumbnail, the Tears of Annalise are always found in pairs. When swallowed by two different people, they bind the swallowers together—when either feels strong emotions (particularly sadness, loss, fear or desire) the other feels it, as well. The effects last until one spills the blood of the other.</p></div>
 <div class="Move"><p class="MagicItem">Teleportation Room	<span class="Tags">緩慢</span></p>
 <p class="NoIndent">James Ninefingers, eccentric genius mage, created these room-sized magical apparati. A stone chamber etched with runes and scribblings, glowing with a faint blue light. When you enter and say aloud the name of a location, roll+INT. ✴On a 10+, you arrive exactly where you’d intended. ✴On a 7–9, the GM chooses a safe location nearby. ✴On a miss, you end up someplace. Maybe it’s nearby? It’s definitely not safe. Strange things sometimes happen to those who bend time and space with these devices.</p></div>
-<div class="Move"><p class="MagicItem">Timunn’s Armor	<span class="Tags">1 armor, 1 重量</span></p>
-<p class="NoIndent">A stealthy suit of armor, it appears as many things to many people and blends in with appropriate apparel. The wearer always seems the height of fashion to any who gaze upon him.</p></div>
-<div class="Move"><p class="MagicItem">Titus’ Truthful Tallow	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A candle of ivory- and copper-colored tallow with a wick of spun silver. When lit, none upon whom its light falls is able to tell a lie. They may keep silent or dissemble but when asked a question directly, they can speak naught but truth.</p></div>
-<div class="Move"><p class="MagicItem">Tricksy Rope	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">A rope that listens. Does tricks, too, like a smart and more obedient snake might. Tell it “Coil” or “Slack” or “Come here, rope” and it will. </p></div>
-<div class="Move"><p class="MagicItem">The Sterling Hand	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">Crafted by dwarven whitesmiths, this mirrored-metal hand is deeply scored with runes of power and rejuvenation. Meant to replace wounded or destroyed limbs from mining accidents, the Sterling Hand bonds to the wound, old or new, and is strong and stout. It can be used as a weapon (Near range) and is made of pure enough silver to harm creatures affected by such.</p></div>
-<div class="Move"><p class="MagicItem">Vellius’s Gauntlets	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">Crafted in the name of Vellius the Clumsy, Vellius the Butter-Fingered, Vellius the Clod, these gloves of simple cloth prevent you from dropping any object you don’t intend to. You cannot be disarmed and will not fall from any rope or ladder, for example. This item can get very messy if you have something strong pulling at your legs while you grip onto something solid.</p></div>
+
+<div class="Move"><p class="MagicItem">蒂蒙之甲 (Timunn’s Armor)	<span class="Tags">1 護甲, 1 重量</span></p>
+<p class="NoIndent">
+	一套不顯眼的護甲，它在不同人的眼中將呈現出不同的樣貌，並會與合適的服裝融為一體。對任何凝視著穿戴者的人來說，穿戴者永遠都像是走在時尚尖端。</p></div>
+
+<div class="Move"><p class="MagicItem">提多的誠實脂燭 (Titus’ Truthful Tallow)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	一個由象牙色與銅色獸脂和一根銀絲燈芯構成的蠟燭。當被點燃時，任何被它燭光照到的人都無法說出任何謊言。他們可以保持沉默或想辦法掩飾，但當被直接質問時，他們將只能說出真話。</p></div>
+
+<div class="Move"><p class="MagicItem">妙戲繩 (Tricksy Rope)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	這條繩子會聽人話，也會表演各種把戲，就如同一條更聰明且更馴順的蛇一樣。命令它「盤繞」、「鬆垂」、或「繩子，過來」，然後它就會依言行事。</p></div>
+
+<div class="Move"><p class="MagicItem">純銀之手 (The Sterling Hand)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	由矮人白鐵匠打造而成，這個表面光亮如鏡的金屬義手中深深刻印著力量與復興的符文。被設計來代替那些因礦坑事故而被重傷或摧毀的肢體，純銀之手能夠接上斷肢的缺口，無論新舊，並表現的強壯而結實。它可以被當作武器使用（<tag class="red">觸及</tag>範圍），且因為它是以足夠純粹的銀打造，因此它也能夠用來傷害那些會被銀製品影響的生物。</p></div>
+
+<div class="Move"><p class="MagicItem">維利烏斯的護手 (Vellius’s Gauntlets)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	以 笨拙的維利烏斯、奶油手維利烏斯、呆子維利烏斯 之名打造而成，這雙以單薄布料織成的手套能夠防止你失手放開任何你無意弄掉的東西。舉例來說，你不會被繳械、也不會失手從任何繩索或爬梯上摔落。不過要注意，若有什麼東西用力拉著你的雙腳，而你又緊緊抓著某個牢固的東西，那麼這雙手套就可能讓情況變得非常糟糕。</p></div>
+
 <div class="Move"><p class="MagicItem">忤逆長刀 (Violation Glaive)	<span class="Tags">及遠, 2 重量</span></p>
-<p class="NoIndent">A legendary blade, said to have been thrust backwards in time from some grim future, the violation glaive is crafted of strange green iron. The blade strikes at the mind of those it wounds, as well as the body. When you hack and slash on a 10+ you have an additional option: you can deal your normal damage, let them counterattack you, and instill the emotion of your choice (maybe fear, reverence, or trust).</p></div>
+<p class="NoIndent">
+	忤逆長刀是一把傳奇刃器，由奇怪的青綠鋼鐵鍛造而成，且傳說是來自於某個可怕的未來。這把刃器不僅會切開它所傷害之人的肉體，更會狠狠打擊目標的心靈。當你在進行<b>砍劈</b>動作時擲出 10+ 的結果時，你得到一個額外的選項：你可以向目標如常造成傷害，承受敵人的反擊，並將你所選擇的情緒灌注到目標的心中（可能是恐懼、崇敬、或信任）。</p></div>
 <div class="Move"><p class="MagicItem">斬首劍 (Vorpal Sword)	<span class="Tags">近身, 3 穿透, 2 重量</span></p>
-<p class="NoIndent">Snicker-snack and all that. Sharp as anything, this simple-seeming sword means to separate one thing from another—the limb from the body or folk from their lives. When you deal damage with the Vorpal Sword, your enemy must choose something (an item, an advantage, a limb) and lose it, permanently.</p></div>
+<p class="NoIndent">
+	劍聲嗖嗖，人頭落地。比世上任何東西都還要鋒利，這把看上去平凡無奇的長劍只有一個目的：把一個東西和另外一個東西斬斷分離──也許把肢體從軀幹上切開、或者把人們與他們的性命一刀兩斷。當你使用斬首劍來造成傷害時，你的敵人必須選擇某個事物（一個物品、一個優勢、或一個肢體）並永久地失去它。</p></div>
 
 
           </div>
@@ -455,7 +474,7 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName, .MagicItem").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
@@ -464,7 +483,12 @@
           if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
+          if(current.context.className=="MagicItem"){
+            link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
+            link_text = " - "+link_text;
+          }
 
+          
           const eng_text = link_text.match(/\((.*)\)/)? link_text.match(/\((.*)\)/)[1]: link_text;
           link_text = link_text.replace(/\(.*\)/, "");
 
