--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -111,36 +111,63 @@
           <div class="col-md-8 col-md-offset-1">
              
 <h1>第一次聚會</h1>
-<p class="NoIndent">The first session of a game of Dungeon World begins with character creation. Character creation is also world creation, the details on the character sheets and the questions that you ask establish what Dungeon World is like—who lives in it and what’s going on.</p>
-<p>This section is for the GM so it’s addressed to you—the GM. For the players, the first session is just like every other. They just have to play their characters like real people and explore Dungeon World. You have to do a little more in the first session. You establish the world and the threats the players will face.</p>
+<p class="NoIndent">
+	地城世界這個遊戲的第一次聚會始於角色創造。角色創造的過程同時也是創造世界的過程，角色卡上的細節以及你所提出的問題都將一點一滴地建立起這個地城世界的樣貌──有誰住在這裡？這裡發生了什麼事？</p>
+<p>
+	這個章節是寫給GM，也就是為了你──GM而寫的。對玩家而言，第一次聚會就如同其他聚會一樣，他們只需要扮演自己的角色，讓他們像真實存在的人們一樣，並探索這個地城世界就好。至於你，在第一次聚會要做的事情則會更多一些：你得建立這個世界以及玩家們將要面對的種種威脅。</p>
 <hr/>
 
-<h2>事前準備 (Prep)</h2>
-<p class="NoIndent">Before the first session, you’ll need to print some stuff. Print off:</p>
-<ul><li>A few copies of the basic moves</li>
-<li>One copy of each class sheet, double-sided</li>
-<li>One copy each of the cleric and wizard spell sheets, double-sided</li>
-<li>The GM sheet</li></ul>
-<p class="NoIndent">You’ll also need to read this whole book, especially the sections on GMing (GM moves) and the basic moves. It’s a good idea to be acquainted with the class moves too, so you can be prepared for them. Be especially sure to read the rules for fronts, but don’t create any yet.</p>
-<p>Think about fantastic worlds, strange magic, and foul beasts. Remember the games you played and the stories you told. Watch some movies, read some comics; get heroic fantasy into your brain.</p>
-<p>What you bring to the first session, ideas-wise, is up to you. At the very least bring your head full of ideas. That’s the bare minimum.</p>
-<p>If you like you can plan a little more. Maybe think of an evil plot and who’s behind it, or some monsters you’d like to use.</p>
-<p>If you’ve got some spare time on your hands you can even draw some maps (but remember, from your principles: leave blanks) and imagine specific locations.</p>
-<p>The one thing you absolutely can’t bring to the table is a planned storyline or plot. You don’t know the heroes or the world before you sit down to play so planning anything concrete is just going to frustrate you. It also conflicts with your agenda: play to find out what happens.</p>
-<h3>Getting Started</h3>
-<p class="NoIndent">When everyone shows up for the first session briefly introduce Dungeon World to anyone who hasn’t played before. Cover the mechanical basis of moves. Introduce the character classes, help players pick their classes, and walk them through character creation.</p>
-<p>Your role during character creation is threefold: help everyone, ask questions, and take notes. When a player makes a choice—particularly for their bonds—ask them about it. Get more detail. Think about what these details mean.</p>
-<p>You should also set expectations: the players are to play their characters as people—skilled adventurers delving into dangerous places, but real people. Your role is to play the rest of the world as a dynamic, changing place.</p>
-<p>Some questions commonly come up during character creation. You should be ready to answer them:</p>
-<p><em>Are the characters friends?</em> No, not necessarily, but they do work together as a team for common goals. Their reasons for pursuing those goals may be different, but they manage to work together.</p>
-<p><em>Are there other wizards?</em> Not really. There are other workers of arcane magic, and the common folk may call them wizards, but they’re not like you. They don’t have the same abilities, though they may be similar. Later on there may be another player character with the same class but no GM character will ever really be a wizard (or any other class).</p>
-<p><em>What’s coin?</em> Coin’s the currency of the realm. It’s good pretty much everywhere. It’ll buy you mundane stuff, like steel swords and wooden staves. The special stuff, like magic weapons, isn’t for sale. Not for coin, anyway…</p>
-<p><em>Is the GM trying to kill us?</em> No. The GM’s job is to portray the world and the things in it and the world is a very dangerous place. You might die. That doesn’t mean the GM is out to get you.</p>
-<p>During this entire process, especially character creation, ask questions. Look for interesting facts established by the characters’ bonds, moves, classes, and descriptions and ask about those things. Be curious! When someone mentions the demons that slaughtered their village find out more about them. After all, you don’t have anything (except maybe a dungeon) and everything they give you is fuel for future adventures.</p>
-<p>Also pay attention to the players’ questions. When mechanical questions come up answer them. When questions of setting or fiction come up your best bet is to turn those questions around. When a player says, “Who is the King of Torsea,” say, “I don’t know. Who is it? What is he like?” Collaborate with your players. Asking a question means it’s something that interests them so work with them to make the answers interesting. Don’t be afraid to say, “I don’t know” and ask them the same questions. Work together to find a fantastic and interesting answer.</p>
-<p>If you’ve come to the table with some ideas about stuff you’d like to see in the world, share them with the players. Their characters are their responsibility and the world is yours—you’ve got a lot of say in what lives in it. If you want the game to be about a hunt for the lost sorcerer-race of aeons past, say so! If the players aren’t interested or they’re sick to death of sorcerers, they’ll let you know and you can work together to find some other way. You don’t need pre-approval for everything but making sure everyone is excited about the broad strokes of the world is a great start.</p>
-<p>Once everyone has their characters created you can take a deep breath. Look back over the questions you’ve asked and answered so far. You should have some notes that will point you towards what the game might look like. Look at what the players have brought to the table. Look to the ideas that’ve been stewing away in your head. It’s time for the adventure to begin!</p>
-<h3>The First Adventure</h3>
+<h2>事前準備</h2>
+<p class="NoIndent">在第一次聚會之前，你會需要列印一些東西。印出：</p>
+<ul>
+	<li>基本動作的副本數份</li>
+	<li>每個職業的角色卡各一份，雙面印刷</li>
+	<li>牧師和法師的法術列表各一份，雙面印刷</li>
+	<li>GM參考紙</li></ul>
+<p>你可以從這裡下載：<a href="https://drive.google.com/file/d/0B8_Fz4m5hcoieW1GRVVaNnRfbnc/view">官網連結</a></p>
+<p class="NoIndent">
+	你也需要讀過這整個網站的內容，特別是GM章節（GM動作）和基本動作的部分。熟悉各個職業的職業動作也是個好主意，這讓你能夠預先做好準備。尤其要確保你已經理解了關於「前置」的規則，但先不要創建它們。</p>
+<p>
+	想想那充滿奇幻的世界、古怪的魔法、以及醜惡的野獸。回憶那些你曾玩過的遊戲以及讀過的故事。觀賞些電影、看些漫畫；讓那些英雄幻想故事進入你的腦海中。</p>
+<p>
+	要把什麼樣的想法帶到第一次聚會中將完全取決於你。但至少讓你的腦袋中充滿各種各樣的靈感和想法，不要腦袋空空。</p>
+<p>
+	如果你喜歡多準備一些，或許可以先構思個邪惡陰謀以及其幕後主謀，或者決定一些你想要放到故事中的怪物。</p>
+<p>
+	如果你還有些多餘的時間，那麼你甚至可以畫幾張地圖（但記住你的原則：適度留白），並想像幾個關於特定場所的風貌。</p>
+<p>
+	然而，有一件事是你絕對不能帶到遊戲桌上的：那就是已經被規劃好的故事情節。在你坐下來並開始遊戲之前，你並不會知道英雄們或這個世界會是什麼樣子，所以若你打算事先決定好任何具體的細節，那這麼做很可能會讓你感到相當挫折。這同時也違反了你的目標事項：用玩的來看看會發生什麼事。</p>
+
+<hr/>
+<h2>遊戲開始！</h2>
+<p class="NoIndent">
+	當大家都到場來參與第一次聚會，為那些還沒有玩過的玩家簡單地介紹一遍。說明一下關於動作的基本機制，介紹各個角色職業，協助玩家們挑選自己的職業，並帶領他們進行角色創造的環節。</p>
+<p>
+	在角色創造的過程中，你同時肩負著三個任務：幫助所有人、拋出問題、並做筆記。當某個玩家做出決定──特別是與他們羈絆有關的決定──對他們提出與這個決定有關的問題，盡可能得到更多的細節，並思考這些細節所代表的意義。</p>
+<p>
+	你也應該在這時候設定好期待：玩家們要把他們的角色如同真實存在的人物一樣扮演出來──他們是一群技藝精湛，深入危險境地探險的冒險者，但同時也是真正的人。至於你，你的職責則是扮演這個世界上的其他一切，讓其成為一個動態、不斷改變的地方。</p>
+<p>
+	有幾個問題經常會在角色創造的過程中出現，你最好已經準備好回答它們：</p>
+<p><b>「角色們彼此是朋友嗎？」</b>
+	不，不一定。但他們確實為了共同的目標而做為團隊一起行動。儘管他們追尋這個目標的理由可能各有不同，他們仍會為了這個目標而共同奮鬥。</p>
+<p><b>「這個世界上有其他的法師嗎？」</b>
+	不完全是。這裡確實存在著其他研究奧秘魔法的工作者，而尋常百姓或許也會把他們稱作法師，但他們跟你不一樣。儘管可能有些相似，但他們並沒有那些與你相同的能力。也許往後會有另一個使用相同職業的玩家角色，但GM的角色永遠不會存在像你一樣的法師（其他職業也是如此）。</p>
+<p><b>「金幣是什麼？」</b>
+	金幣是流通於這個國度的貨幣。它幾乎在所有地方都能使用。它能讓你買到一些尋常的貨物，像是鐵劍或木質長杖。至於那些特別的玩意兒，像是魔法武器，則是非賣品，或者，至少不是你用金幣就能得到的東西……</p>
+<p><b>「GM會嘗試殺死我們嗎？」</b>
+	不會。GM的工作僅僅是描繪這個世界以及這個世界上的事物。這個世界是個相當危險的場所，你們也確實可能會死去，但這並不代表GM打算幹掉你們。</p>
+
+<p>
+	在這整個過程中，尤其是在角色創造的環節，記得向玩家們拋出問題。尋找那些因羈絆、動作、職業、和角色描述而建立起來的有趣事實，並詢問關於它們的細節。永遠保持好奇！當某人提到了那些屠殺了他家鄉居民的惡魔時，試著更進一步了解它們。畢竟，你現在什麼都沒有準備（或可能只準備了地城），而他們提供給你的這一切都將成為未來冒險的材料。</p>
+<p>
+	此外，你也要留意玩家們提出的問題。當出現與遊戲機制有關的問題時，回答他們，為他們解惑。而當有人提出關於故事或世界觀設定的問題時，你最好的選擇就是把這些問題拋回去給他們。當某個玩家說：「托爾西的國王是誰？」，你可以說「我不知道。」並接著反問：「你們覺得他會是誰？他是什麼樣的人？」 與你的玩家合作，共同構築出這個世界的一切。當有人發問，就代表有某個東西引起了他們的興趣，因此你要做的就是與他們一起努力讓這個問題的答案變得同樣有趣。不要害怕說出「我不知道」，反過來問他們相同的問題，一起找出既有趣又充滿奇幻風采的答案吧。</p>
+<p>
+	如果你腦中已經有了一些想法是關於你預期會在這個世界中出現的事物，將它們與你的玩家分享。他們的角色是他們的責任，而這整個世界的樣貌如何則由你負責──你有很大的發言權來決定什麼樣的事物存在於此。若你希望這場遊戲是關於追尋那失落於遠古年代的術士種族，儘管說出來吧！如果玩家們不感興趣，或他們對術士這個題材早就厭倦透頂，他們會讓你知道，而你們將會一起合作找出其他的方案。你不需要預先批准所有一切，但確定每個人都對這個世界的大方向感興趣，才算是個好的開始。</p>
+<p>
+	一旦所有人都創好了自己的角色，你可以深呼吸，回顧一下你目前為止提出的問題與得到的回答。你應該已經記下幾個重點，提醒你這個遊戲會呈現什麼樣的風貌。看看玩家們帶到遊戲桌上的材料。看看那些在你腦海中翻騰盤旋的點子。是時候揭開這場冒險的序幕了！</p>
+
+<hr/>
+<h2>第一場冒險</h2>
 <p class="NoIndent">The first adventure is really about discovering the direction that future sessions will take. Throughout the first adventure keep your eye out for unresolved threats; note dangerous things that are mentioned but not dealt with. These will be fuel for sessions to come.</p>
 <p>Start the session with a group of player characters (maybe all of them) in a tense situation. Use anything that demands action: outside the entrance to a dungeon, ambushed in a fetid swamp, peeking through the crack in a door at the orc guards, or being sentenced before King Levus. Ask questions right away—“who is leading the ambush against you?” or “what did you do to make King Levus so mad?” If the situation stems directly from the characters and your questions, all the better.</p>
 <p>Here’s where the game starts. The players will start saying and doing things, which means they’ll start making moves. For the first session you should watch especially carefully for when moves apply, until the players get the hang of it. Often, in the early sessions, the players will be most comfortable just narrating their actions—this is fine. When a move triggers let them know. Say, “It sounds like you’re trying to…” and then walk them through the move. Players looking for direction will look to their character sheet. When a player just says “I hack and slash him” be quick to ask, “so what are you actually doing?” Ask “How?” or “With what?”</p>
@@ -199,7 +226,7 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName, .SpellName").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName, .MagicItem").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
@@ -208,7 +235,12 @@
           if(current.context.className=="MonsterName" || current.context.className=="SpellName"){
             link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
           }
+          if(current.context.className=="MagicItem"){
+            link_text = link_text.replace(/\<span class=\"Tags\"\>.*\<\/span\>/g, "");
+            link_text = " - "+link_text;
+          }
 
+          
           const eng_text = link_text.match(/\((.*)\)/)? link_text.match(/\((.*)\)/)[1]: link_text;
           link_text = link_text.replace(/\(.*\)/, "");
 
